<resources>
    <string name="app_name">BudgetPlanner</string>
    <string name="app_title">Budget Planner</string>
    <string name="lblAnalysis">Analysis</string>
    <string name="lblAdd_expenses">Expenses</string>
    <string name="lbl_Income">Income</string>
    <string name="lblHistory_reports">History and Reports</string>
    <string name="lblRemains">Balance (LKR) : </string>
    <string name="lblIncome">Income (LKR) : </string>
    <string name="lblExpenses">Expenses (LKR) : </string>
    <string name="lblOverview">Overview</string>
    <string name="lblFrom">From :-</string>
    <string name="lblTo">To :-</string>
    <string name="lblPaperSize">Paper Size :-</string>
    <string name="lblOrientation">Orientation :-</string>
    <string name="btnGenerate">Generate</string>
    <string name="pprA4">A4</string>
    <string name="pprA5">A5</string>
    <string name="oriPort">Portrait</string>
    <string name="oriLand">Landscape</string>
    <string name="fldDate">Enter Date</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Open">open</string>
    <string name="Close">close</string>

    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="purpose">Purpose</string>
    <string name="payment">Payment Method</string>
    <string name="comments">Comments</string>
    <string name="bill">Bill Details</string>
    <string-array name="purpose">
        <item>Others</item>
        <item>Rent Paid</item>
        <item>Gift</item>
        <item>Food</item>
        <item>Hotel</item>
        <item>Shopping</item>
        <item>Groceries</item>
        <item>Gas/Petrol</item>
        <item>Travel</item>
        <item>Utility bills</item>
        <item>Entertainment</item>
    </string-array>
    <string-array name="payment_method">
        <item>Cash</item>
        <item>Card</item>
        <item>Cheque</item>
    </string-array>
</resources>
