<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    tools:context=".HistoryandReports">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/lblHistory_reports"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:background="@color/colorMint"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="vertical"
                    android:layout_weight="1.4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lblFrom"
                        android:textColor="@color/colorBlack"
                        android:textSize="25sp"
                        android:paddingStart="40dp"
                        android:paddingEnd="0dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1.6"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <EditText
                        android:id="@+id/fromDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/fldDate"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="vertical"
                    android:layout_weight="1.4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lblTo"
                        android:textColor="@color/colorBlack"
                        android:textSize="25sp"
                        android:paddingStart="40dp"
                        android:paddingEnd="0dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1.6"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <EditText
                        android:id="@+id/toDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/fldDate" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="vertical"
                    android:layout_weight="1.4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lblPaperSize"
                        android:textColor="@color/colorBlack"
                        android:textSize="25sp"
                        android:paddingStart="40dp"
                        android:paddingEnd="0dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1.6">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:weightSum="2"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <CheckBox
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/pprA4"
                                />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <CheckBox
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/pprA5"
                                />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="vertical"
                    android:layout_weight="1.4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lblOrientation"
                        android:textSize="25sp"
                        android:textColor="@color/colorBlack"
                        android:paddingStart="40dp"
                        android:paddingEnd="0dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1.6">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:weightSum="2"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <CheckBox
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/oriPort"
                                />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <CheckBox
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/oriLand"
                                />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                >

                <Button
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:id="@+id/btnGenerate"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/btnGenerate"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>