<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Remain-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/border">

                <!-- Left to spend / Label -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="bottom"
                        android:paddingStart="40dp"
                        android:paddingEnd="50dp"
                        android:text="@string/lblRemains"
                        android:textColor="@color/colorBlack"
                        android:textSize="40sp"
                        android:autoSizeTextType="uniform"
                        android:autoSizeMinTextSize="40sp"
                        android:autoSizeMaxTextSize="70sp"
                        android:autoSizeStepGranularity="2sp" />

                </LinearLayout>

                <!-- Left to spend / Value -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtRemainder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorLightGray"
                        android:textSize="60sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <!-- Income/ Expenses-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:gravity="center_vertical">

                <!-- Income -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:text="@string/lblIncome"
                        android:textColor="@color/colorBlack"
                        android:textSize="26sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/border">

                    <TextView
                        android:id="@+id/txtIncome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="10dp"
                        android:text="+ 250,000"
                        android:textAlignment="center"
                        android:textColor="@color/colorGrassDark"
                        android:textSize="35sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Expenses -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:text="@string/lblExpenses"
                        android:textColor="@color/colorBlack"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/border">

                    <TextView
                        android:id="@+id/txtExpenses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="10dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorGrapeFruitDark"
                        android:textSize="35sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- GridLayout implementation -->
        <!-- First Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/lblOverview"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/spend_limit"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@color/colorGrapeFruit"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/lblAnalysis"
                        android:src="@drawable/ic_limit" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorGrapeFruitDark"
                        android:padding="8dp"
                        android:text="@string/lblAnalysis"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/expenses"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@color/colorBitterSweet"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/lblAdd_expenses"
                        android:src="@drawable/ic_expenses" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorBitterSweetDark"
                        android:padding="8dp"
                        android:text="@string/lblAdd_expenses"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                </LinearLayout>


            </LinearLayout>
            <!-- Second Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/income"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@color/colorGrass"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/lbl_Income"
                        android:src="@drawable/ic_income" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorGrassDark"
                        android:padding="8dp"
                        android:text="@string/lbl_Income"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/history_reports"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@color/colorBlueJeans"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/lblHistory_reports"
                        android:src="@drawable/ic_report_history" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorBlueJeansDark"
                        android:padding="8dp"
                        android:text="@string/lblHistory_reports"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>