<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Expenses">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical" />

            <ImageView
                android:layout_width="87dp"
                android:layout_height="93dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="155dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/logo1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="50dp"
                android:text="Expenses"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_today_black_24dp"/>
                <EditText
                    android:id="@+id/txtdate"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/calimgbtn"
                    android:paddingLeft="20dp"
                    android:layout_weight="1"
                    android:inputType="date"
                    android:textSize="14sp"
                    android:hint="@string/date"/>

                <ImageButton
                    android:id="@+id/calimgbtn"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_adjust_black_24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_monetization_on_black_24dp"/>

                <EditText
                    android:id="@+id/txtamount"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:textSize="14sp"
                    android:hint="@string/amount"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_shopping_cart_black_24dp" />

                <Spinner
                    android:id="@+id/spinpurpose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_credit_card_black_24dp"/>

                <Spinner
                    android:id="@+id/spinpayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_comment_black_24dp"/>

                <EditText
                    android:id="@+id/txtcomment"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:hint="@string/comments"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_note_add_black_24dp"/>

                <EditText
                    android:id="@+id/txtbill"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:hint="@string/bill"/>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    app:srcCompat="@android:drawable/ic_menu_upload" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="352dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/viewbtn"
                android:layout_width="50dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_remove_red_eye_black_24dp" />

            <Button
                android:id="@+id/btnsave"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonstyle"
                android:text="Save"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>